# Test_Task

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Project.md  README.md  alembic.ini  docker-compose.yml  fdck.py  main.py  mint.md  pyproject.toml  requirements.txt
.rvenv/Scripts/: activate  activate.bat
Docker/: Dockerfile  entrypoint.sh  entrypoint_celery.sh
Docker/Docker/: entrypoint.sh
alembic/: env.py
alembic/versions/: 5bf0a5d0ef9c_initial_migration.py
app/: config.py  database.py  main.py  types.py
app/api/: __init__.py  health_check.py  routes.py
app/clients/: deribit_client.py
app/config/: __init__.py  app.py  base.py  celery.py  config.py  database.py  deribit.py  monitoring.py  settings.py
app/database/: database.py  dependencies.py
app/middleware/: exception_handler.py
app/models/: models.py  models_base.py
app/repositories/: price_repository.py
app/schemas/: __init__.py  base.py  requests.py  responses.py
app/services/: price_service.py
app/utils/: __init__.py  validate_ticker.py  validators.py
clients/: __init__.py  deribit_client.py  deribit_http_client.py  deribit_mapper.py  deribit_parser.py
crypto_price_tracker/: .env.example
crypto_price_tracker/app/: config.py  database.py  main.py  models.py  schemas.py
crypto_price_tracker/clients/: __init__.py  deribit_client.py
crypto_price_tracker/tasks/: celery.py  price_fetcher.py
docs/: .env.example  ARCHITECTURE.md  DESIGN_DECISIONS.md  INSTALLATION.md  Makefile  TECHNICAL_DOCS.md
src/: app.py  celery_app.py  celerybeat-schedule  main.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  app.py  base.py  celery.py  cors.py  database.py  deribit.py  logging.py  monitoring.py  redis.py  settings.py
src/database/: __init__.py  database.py  dependencies.py  uow.py
src/exceptions/: __init__.py  (+1 more)
tasks/: celery.py  price_fetcher.py
tests/: conftest.py  requirements.txt  test_repository_architecture.py  test_validation.py
(+32 files in other folders)
