[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
length_sort = true
sections = [
    "STDLIB",
    "EXTERNAL",
    "FIRSTPARTY",
    "THIRDPARTY",
    "LOCALFOLDER"
]
known_first_party = ["src"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[project]
name = "crypto-price-tracker"
version = "1.0.0"
description = "API для получения данных о ценах криптовалют с биржи Deribit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI и веб-сервер
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "starlette>=0.50.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "annotated-types>=0.7.0",
    "typing-inspection>=0.4.2",

    # Базы данных
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",

    # Celery и Redis
    "celery>=5.4.0",
    "redis>=5.2.1",

    # Асинхронный HTTP
    "aiohttp>=3.13.3",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.4.0",
    "frozenlist>=1.8.0",
    "multidict>=6.7.0",
    "propcache>=0.4.1",
    "yarl>=1.22.0",

    # Утилиты
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
    "packaging>=25.0",
    "idna>=3.11",
    "h11>=0.16.0",
    "MarkupSafe>=3.0.3",
    "Mako>=1.3.10",
    "greenlet>=3.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "clients*"]